@@ -26,7 +26,7 @@ include common.mk
 
 ACLOCAL_AMFLAGS = -I m4
 
-BUILT_DISTFILES = BUGS INSTALL.OCTAVE
+BUILT_DISTFILES = AUTHORS BUGS INSTALL.OCTAVE
 
 EXTRA_DIST = \
   BUGS \
@@ -101,8 +101,9 @@ endif
 noinst_SCRIPTS = run-octave
 
 INFO_FILES = \
-  INSTALL.OCTAVE \
-  BUGS
+  AUTHORS \
+  BUGS \
+  INSTALL.OCTAVE
 
 CLEANFILES = $(bin_PROGRAMS) $(bin_SCRIPTS) $(BUILT_SOURCES)
 
@@ -148,9 +149,9 @@ run-octave: run-octave.in Makefile
 	  cp $< $@; \
 	fi
 
-BUGS INSTALL.OCTAVE:
+AUTHORS BUGS INSTALL.OCTAVE:
 	$(MAKE) -C doc ../$@
-.PHONY: BUGS INSTALL.OCTAVE
+.PHONY: AUTHORS BUGS INSTALL.OCTAVE
 
 octetc_DATA = NEWS
 
